fixed background position on mobile, fixed paddings and fonts

--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -1,12 +1,11 @@
 .about-container-background {
   position: relative;
   margin: 0 auto;
-  // max-width: 100%;
 
   background-image: url('../images/about__background-mobile.png');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position-y: 763px;
+  background-position-y: 732px;
   @include mobile-retina {
     background-image: url('../images/about__background-mobile@2x.png');
   }
@@ -23,7 +22,6 @@
   }
   @include desktop-retina {
     background-image: url('../images/about__background-desktop@2x.png');
-    // background-position-y: bottom;
   }
 }
 
@@ -43,8 +41,11 @@
 
   &__tittle-second {
     color: $third-font-color;
-    font-size: 18px;
-    line-height: 21px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
     padding-top: 125px;
     padding-bottom: 15px;
     margin: 0;
@@ -65,9 +66,11 @@
   }
 
   &__tittle-main {
-    font-size: 34px;
-    line-height: 39px;
-    letter-spacing: 0.04em;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 66px;
+    text-align: center;
+    letter-spacing: 0.06em;
     color: $first-font-color;
     margin: 0 auto;
     max-width: 200px;
@@ -102,7 +105,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-inline: 30px;
+    padding-inline: 28px;
 
     @include tablet {
       flex-direction: row;
@@ -132,14 +135,13 @@
 
   &__block-text {
     padding-top: 55px;
+    padding-bottom: 39px;
 
     @include tablet {
-      // padding-left: 0;
-      // font-size: 14px;
+      padding-bottom: 0;
     }
     @include desktop {
-      // margin-top: 40px;
-      // font-size: 14px;
+      // padding-bottom: 0;
     }
   }
   &__block-text1 {
@@ -148,7 +150,7 @@
     line-height: 1.62;
     color: $fourth-font-color;
     margin: 0;
-    // margin-bottom: 45px;
+    margin-bottom: 30px;
     text-align: left;
 
     @include tablet {
@@ -161,9 +163,12 @@
     @include desktop {
       max-width: 463px;
       height: 79px;
-      line-height: 28px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.76;
+      margin-left: 74px;
       margin-bottom: 35px;
-      padding-left: 57px;
+      // padding-left: 57px;
     }
   }
 
@@ -173,8 +178,7 @@
     line-height: 1.62;
     color: $fifth-font-color;
     margin: 0;
-
-    max-width: 100%;
+    max-width: 218px;
     text-align: left;
 
     @include tablet {
@@ -191,9 +195,11 @@
       margin-left: 74px;
       width: 463px;
       height: 79px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.94;
       letter-spacing: 0.04em;
-      line-height: 28px;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
       // padding-top: 35px;
     }
   }
@@ -221,8 +227,10 @@
     @include desktop {
       max-width: 463px;
       margin-left: 74px;
-      line-height: 28px;
-      // padding-top: 55px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.94;
+      letter-spacing: 0.04em;
       margin-bottom: 45px;
     }
   }
